<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" app:cardCornerRadius="8dp" android:padding="2dp"
        android:layout_margin="16dp">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/tv_details_Language"
                style="@style/BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/tv_details_Language"
                app:layout_constraintEnd_toEndOf="@+id/tv_details_Language"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                android:id="@+id/tv_details_Language_val"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_details_Language"
                style="@style/BodySmall"/>

        <TextView
                android:id="@+id/tv_details_releaseDate"
                style="@style/BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                app:layout_constraintEnd_toStartOf="@+id/tv_details_voteAverage" android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="@+id/tv_details_Language"
                app:layout_constraintStart_toEndOf="@+id/tv_details_Language"
                android:layout_marginStart="16dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_details_releaseDate_val"
                app:layout_constraintBottom_toBottomOf="@+id/tv_details_Language_val"
                app:layout_constraintStart_toStartOf="@+id/tv_details_releaseDate"
                app:layout_constraintEnd_toEndOf="@+id/tv_details_releaseDate"
                style="@style/BodySmall"/>

        <TextView
                android:id="@+id/tv_details_voteAverage"
                style="@style/BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="@+id/tv_details_releaseDate"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_details_voteAverage_val"
                app:layout_constraintStart_toStartOf="@+id/tv_details_voteAverage"
                app:layout_constraintEnd_toEndOf="@+id/tv_details_voteAverage"
                app:layout_constraintBottom_toBottomOf="@+id/tv_details_releaseDate_val" style="@style/BodySmall"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>